--- a/_posts/0000-01-02-soldier-t.md
+++ b/_posts/0000-01-02-soldier-t.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our T's slide!"
 ---
-this is an edit
+this is an my thrid edit using notepad++
 Use the left arrow to go back!
